Prevent logo from wrapping words

--- a/src/base/logo/styles.css
+++ b/src/base/logo/styles.css
@@ -1,6 +1,9 @@
 .logo {
+  margin: 0;
+  padding: 0;
   font-size: 22px;
   color: var(--color-black);
+  white-space: nowrap;
 }
 
 @media (min-width: 568px) {
